--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -57,9 +57,9 @@
         <CheckBoxPreference
             android:key="kk_ui_clock_time"
             android:title="@string/kk_ui_clock_time_title" />
-        <CheckBoxPreference
+<!--        <CheckBoxPreference
             android:key="kk_ui_clock_date"
-            android:title="@string/kk_ui_clock_date_title" />
+            android:title="@string/kk_ui_clock_date_title" /> -->
      </PreferenceCategory>
 
     <PreferenceCategory
