--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -102,6 +102,8 @@
     <string name="kk_keyoverride_specialkeys">Special Keys</string>    
     <string name="kk_keyoverride_otherkeys">Other Keys</string>    
     <string name="kk_keyoverride_category_current_actions">Current Key Override Actions</string>    
+
+    <string name="kk_sendkey_title">Send Key</string>    
     
     <string name="add">Add</string>    
     
@@ -167,6 +169,7 @@
     
     <string-array name="kk_action_dialog_entries">
         <item>Start Application</item>
+        <item>Send Key</item>
         <item>Expanded Desktop</item>
         <item>Expanded Desktop Keep Top Status Bar (PhabletUI Only)</item>
         <item>Switch Top Application between SplitView and FullScreen</item>
@@ -185,6 +188,7 @@
     </string-array>
     <string-array name="kk_action_dialog_values">
         <item>app</item>
+        <item>sendkey</item>
         <item>expanded_desktop</item>
         <item>expanded_desktop_keepstatusbar</item>
         <item>splitview_auto</item>
