- PhabletUI: disable Panels drop shadow by default (reenable in Settings => UISettings => Misc
Change-Id: Ibc24e897f6a9aa381a1e2ef14fe930b792c2eb03

--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -102,7 +102,12 @@
             android:defaultValue="false"
             android:title="@string/auto_expanded_desktop_ondock_title"
         />
-
+    <CheckBoxPreference
+            android:key="enable_panels_dropshadow"
+            android:defaultValue="false"
+            android:title="@string/enable_panels_dropshadow_title"
+        />
+    
     </PreferenceCategory>
 
 </PreferenceScreen>
