--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -126,6 +126,7 @@
 
     
     <string name="auto_expanded_desktop_ondock_title">Auto Expanded Desktop When Docked</string>
+    <string name="enable_panels_dropshadow_title">Enable Screen Shadow When Panels Expanded (PhabletUI)</string>
     
 <!-- Arrays -->
 
