Allow to disable wallpaper & service
Change-Id: Ie0f307b186300ccb836055c49254db4e38f32802

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -27,6 +27,11 @@
                 android:title="@string/brightness"
                 android:persistent="false"/>
 
+        <Preference
+                android:key="kk_ui_wallpaper_mode"
+                android:title="@string/kk_ui_wallpaper_mode_title"
+                android:persistent="false"/>
+
         <PreferenceScreen
                 android:key="wallpaper"
                 android:title="@string/wallpaper_settings_title"
