--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -50,6 +50,10 @@
     <string name="kk_ui_package_removed">The previously selected package was not found</string>
     <string name="kk_ui_activity_pref_default_title">No Action Selected</string>
     <string name="kk_ui_activity_pref_default_summary">Tap to select a custom long press activity</string>
+
+    <string name="kk_ui_wallpaper_mode_title">Wallpaper Mode/Disable (speed increase)</string>
+
+
     <string name="kk_activity_dialog_title">Select Activity</string>
     <string name="kk_action_dialog_title">Select Action</string>
 
@@ -213,6 +217,13 @@
         <item>Crop</item>
         <item>Scale</item>
     </string-array>
+
+    <string-array name="kk_wallpaper_modes">
+        <item>Normal</item>
+        <item>Disable System Wallpaper Rendering</item>
+        <item>Disable Wallpaper Service (Requires reboot)</item>
+    </string-array>
+
 
     <string-array name="kk_keyoverride_function_entries">
         <item>Wifi</item>
