--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -178,6 +178,7 @@
         <item>Send Key</item>
         <item>Immersive Mode</item>
         <item>Immersive Mode - Keep Top Status Bar</item>
+        <item>Autorotation Toggle</item>
         <item>Switch Top Application between SplitView and FullScreen</item>
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
@@ -197,6 +198,7 @@
         <item>sendkey</item>
         <item>expanded_desktop</item>
         <item>expanded_desktop_keepstatusbar</item>
+        <item>autorotation</item>
         <item>splitview_auto</item>
         <item>splitview_1</item>
         <item>splitview_2</item>
