--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -176,40 +176,50 @@
     <string-array name="kk_action_dialog_entries">
         <item>Start Application</item>
         <item>Send Key</item>
+        <item>Kill process</item>
+        <item>Switch To Previous App</item>
         <item>Immersive Mode</item>
         <item>Immersive Mode - Keep Top Status Bar</item>
         <item>Autorotation Toggle</item>
+        <item>Display Recent Apps</item>
+        <item>Show Power Menu</item>
+        <item>Expand/Collapse Notifications Panel</item>
+        <item>Expand Quick Settings Panel</item>
+        <item>Wifi Toggle</item>
+        <item>Bluetooth Toggle</item>
+        <item>Touchpad Toggle</item>
+        <item>Launch Settings</item>
+        <item>Take screenshot</item>
+        <item>Screen off</item>
+        <item>Google Now</item>
         <item>Switch Top Application between SplitView and FullScreen</item>
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
-        <item>Switch To Previous App</item>
-        <item>Display Recent Apps</item>
-        <item>Expand/Collapse Notifications Panel</item>
-        <item>Expand Quick Settings Panel</item>
-        <item>Take screenshot</item>
-        <item>Kill process</item>
-        <item>Screen off</item>
-        <item>Google Now</item>
 <!--        <item>Power Menu</item> -->
         <item>None</item>
     </string-array>
     <string-array name="kk_action_dialog_values">
         <item>app</item>
         <item>sendkey</item>
+        <item>killcurrent</item>
+        <item>switch_toprevious_task</item>
         <item>expanded_desktop</item>
         <item>expanded_desktop_keepstatusbar</item>
         <item>autorotation</item>
+        <item>recent</item>
+        <item>show_powermenu</item>
+        <item>show_notifications_panel</item>
+        <item>show_settings_panel</item>
+        <item>wifi_toggle</item>
+        <item>bluetooth_toggle</item>
+        <item>touchpad_toggle</item>
+        <item>launch_settings</item>
+        <item>screenshot</item>
+        <item>screenoff</item>
+        <item>assist</item>
         <item>splitview_auto</item>
         <item>splitview_1</item>
         <item>splitview_2</item>
-        <item>switch_toprevious_task</item>
-        <item>recent</item>
-        <item>show_notifications_panel</item>
-        <item>show_settings_panel</item>
-        <item>screenshot</item>
-        <item>killcurrent</item>
-        <item>screenoff</item>
-        <item>assist</item>
 <!--        <item>powermenu</item> -->
         <item>none</item>
     </string-array>
