[3/3]Settings: add "Accept all files" option for incoming files via Bluetooth
  Vanilla Android requires the incoming file from Bluetooth to be certain mime-types.
  The mime-types allowed are defined in
packages/apps/Bluetooth/src/com/android/bluetooth/opp/Constants.java
  But sometimes we need to accept files that is not in the list,such as RAR archives
or APK packages.
  This patch makes "Accept all files" an option in Settings -> Bluetooth -> (Menu),
and then saves users' choice to Settings Provider database.
  This will meet users' demand as well as keep the phone from unsafe files
when users don't need to accept the files out of the mime-type whitelist.

Change-Id: I5f04d3ccb45bd5c6525b746855bd19ccc8501d32

--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -137,6 +137,8 @@
     <string name="auto_expanded_desktop_ondock_title">Auto Immersive Mode When Docked</string>
     <string name="enable_panels_dropshadow_title">Enable Screen Shadow When Panels Expanded (PhabletUI)</string>
     
+    <string name="bluetooth_accept_all_files">Accept all file types</string>
+
 <!-- Arrays -->
 
     <string-array name="kk_ui_mode_entries">
