Add Long Press action + Show/Hide on Relaunch Floating NavBar Button
Change-Id: I6d078a38a52daf0b0f6348f26864e9639db56555

--- a/res/xml/kk_softkey_settings.xml
+++ b/res/xml/kk_softkey_settings.xml
@@ -74,4 +74,15 @@
             settings:providerUri="@string/kk_ui_splitview_auto_target_uri" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="kk_ui_relaunch_floating"
+        android:title="@string/kk_ui_relaunch_floating_longpress_title" >
+        <com.android.settings.katkiss.ActionPreference
+            android:key="kk_ui_relaunch_floating_longpress"
+            android:title="@string/kk_ui_relaunch_floating_longpress_title"
+            android:layout="@layout/kk_longpress_preference"
+            android:widgetLayout="@layout/kk_longpress_preference_widget"
+            settings:providerUri="@string/kk_ui_relaunch_floating_target_uri" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
