--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -31,10 +31,12 @@
     <string name="kk_ui_menu_longpress_title">Menu Button Long Press Action</string>  
     <string name="kk_ui_switch_toprevious_task_longpress_title">Switch To Previous App Long Press Action</string>  
     <string name="kk_ui_splitview_auto_longpress_title">Split View Long Press Action</string>  
+    <string name="kk_ui_relaunch_floating_longpress_title">Relaunch Floating Long Press Action</string>  
 
     <string name="kk_ui_multiwindow_title">MultiWindow Settings</string>  
     <string name="kk_ui_switch_toprevious_task_visibility_title">Show Switch To Previous App NavBar Button</string>  
     <string name="kk_ui_splitview_auto_visibility_title">Show Split View NavBar Button</string>  
+    <string name="kk_ui_relaunch_floating_visibility_title">Show Relaunch Floating NavBar Button</string>  
     <string name="kk_ui_recents_multiwindow_icons_visibility_title">Show MultiWindow Icons On Recent Apps Screen</string>  
 
     <string name="kk_ui_back_target_uri">kk_ui_back_target_uri</string>
@@ -42,6 +44,7 @@
     <string name="kk_ui_menu_target_uri">kk_ui_menu_target_uri</string>
     <string name="kk_ui_switch_toprevious_task_target_uri">kk_ui_switch_toprevious_task_target_uri</string>
     <string name="kk_ui_splitview_auto_target_uri">kk_ui_splitview_auto_target_uri</string>
+    <string name="kk_ui_relaunch_floating_target_uri">kk_ui_relaunch_floating_target_uri</string>
     
     <string name="kk_ui_screenshot_title">Screenshot</string>
     <string name="kk_ui_screenoff_title">Screen Off</string>
@@ -204,6 +207,7 @@
         <item>Switch Top Application between SplitView and FullScreen</item>
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
+        <item>Relaunch Top Application as Floating</item>
 <!--        <item>Power Menu</item> -->
         <item>None</item>
     </string-array>
@@ -238,6 +242,7 @@
         <item>splitview_auto</item>
         <item>splitview_1</item>
         <item>splitview_2</item>
+        <item>relaunch_floating</item>
 <!--        <item>powermenu</item> -->
         <item>none</item>
     </string-array>
