--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -47,6 +47,9 @@
             android:key="kk_ui_btn_splitview_auto"
             android:title="@string/kk_ui_splitview_auto_visibility_title" />
         <CheckBoxPreference
+            android:key="kk_ui_btn_relaunch_floating"
+            android:title="@string/kk_ui_relaunch_floating_visibility_title" />
+        <CheckBoxPreference
             android:key="kk_ui_recents_multiwindow_icons"
             android:title="@string/kk_ui_recents_multiwindow_icons_visibility_title" />
     </PreferenceCategory>
