--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -208,6 +208,7 @@
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
         <item>Relaunch Top Application as Floating</item>
+        <item>Show/Hide All Floating Apps</item>
 <!--        <item>Power Menu</item> -->
         <item>None</item>
     </string-array>
@@ -243,6 +244,7 @@
         <item>splitview_1</item>
         <item>splitview_2</item>
         <item>relaunch_floating</item>
+        <item>show_hide_all_floating</item>
 <!--        <item>powermenu</item> -->
         <item>none</item>
     </string-array>
