Quick Settings: Add Ethernet Toggle Tile
Change-Id: I32aa6bafef5ff90101b9a397c1890a4b49dbb042

--- a/res/values/quicksettings.xml
+++ b/res/values/quicksettings.xml
@@ -35,6 +35,7 @@
     <string name="title_tile_sync">Sync</string>
     <string name="title_tile_wifiap">Wi-Fi AP</string>
     <string name="title_tile_wifi">Wi-Fi</string>
+    <string name="title_tile_ethernet">Ethernet</string>
     <string name="title_tile_wimax">WiMAX</string>
     <string name="title_tile_user">User switcher</string>
     <string name="title_tile_networkmode">Network mode</string>
