--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -24,6 +24,12 @@
         android:key="keyoverride"
         android:title="@string/kk_keyoverride_title"
         android:fragment="com.android.settings.katkiss.KeyOverrideFragment" />
+      <Preference
+        android:key="quicklaunch"
+        android:title="@string/quick_launch_title" >
+          <intent android:action="android.settings.QUICK_LAUNCH_SETTINGS" />
+      </Preference>
+
     </PreferenceCategory>
     
     <PreferenceCategory android:key="language_cat"
